@startuml classes.puml

class Sistema{
    - registros: Set<Ticket>
}

abstract class Cliente{
    - nome: String
    - nMaxVeiculos: int
    - veiculos: HashSet<String>
    + {abstract} getId(): String
    + {abstract} calculaValor(Ticket): double
    + registarVeiculo(String): boolean
    + removerVeiculo(String): boolean
}
together{

    class ClienteProfessor{
        - cpf: String
        - nMaxVeiculos = 2
    }

    class ClienteAluno{
        - cpf: String
        - nMaxVeiculos = 1
        - valorFixo: double
        - saldo: double
    }

    class ClienteEmpresa{
        - placa: Set<String>
    }
}

class Ticket{
    - cliente: Cliente
    - placa: String
    - hEntrada: Date
    - hSaida: Date
    - valorTotalDevido: double
    - valorPago: double
    - nomeDesconto: String
    - percentagemDesconto: double
    - valorDesconto: double

    + configurarDesconto(String, double): void
    + diffHoras(): long
    + diffDias(): long
    + calculaValor(): double
}

interface Bloqueio{
    + estaBloqueado(): boolean
}

class ValidaDados <<utility>>{
    + {static} validaPlaca(String): boolean
    + {static} validaCPF(String): boolean
    + {static} validaCNPJ(String): boolean
}

Cliente <|-down- ClienteProfessor
Cliente <|-down- ClienteAluno
Cliente <|-down- ClienteEmpresa

ClienteAluno ..|> Bloqueio
ClienteEmpresa ..|> Bloqueio

Cliente *-right- Ticket 
Cliente .left.> ValidaDados

@enduml